#ifndef FILEMANAGER_H
#define FILEMANAGER_H

#include <string>
#include <filesystem>
#include <fstream>
#include <iostream>

#include "Library.h"

class FileManager {
public:
    static void saveLibrary()
    {
        Library& lib = Library::Instance(); // Access the singleton Library instance
        std::filesystem::create_directories("log");
        std::filesystem::path filepath = "log/log.txt";  // created at /build/log.log.txt 
        std::ofstream file(filepath);
        for(const Book& b : lib.getBooks())
        {
            file << "Book: " << b.getAuthor() << ", " << b.getTitle() << ", Available: " << (b.isAvailable() ? "Yes" : "No") << std::endl;
        }        

        for(const User& u : lib.getUsers())
        {
            file << "User: " << u.getUserName() << ", ID: " << u.getUserId() << ", Book_Authors: ";
            for(const std::string& author : u.getBookAuthors())
            {
                file << author << ", ";
            }
            file << std::endl;
        }
    }

    static void loadLibrary()
    {
        Library& lib = Library::Instance(); // Access the singleton Library instance
        lib.clear(); // Clear existing data before loading
        std::filesystem::path filepath = "log/log.txt";
        if (!std::filesystem::exists(filepath)) {
            std::cerr << "File does not exist: " << filepath << std::endl;
            return;
        }

        std::ifstream file(filepath);
        std::string line;
        while (std::getline(file, line))
        {
            // Assuming the format is consistent with the saveLibraryToFile method
            if (line.rfind("Book: ", 0) == 0) // Check if line starts with "Book: "
            {
                size_t authorStart = line.find(": ") + 2;
                size_t authorEnd = line.find(", ", authorStart);
                std::string author = line.substr(authorStart, authorEnd - authorStart);

                size_t titleStart = authorEnd + 2;
                size_t titleEnd = line.find(", Available: ", titleStart);
                std::string title = line.substr(titleStart, titleEnd - titleStart);

                bool available = (line.substr(titleEnd + 13) == "Yes");

                Book book(available, author, title);
                lib.addBook(book);
            }
            else if (line.rfind("User: ", 0) == 0) // Check if line starts with "User: "
            {
                size_t nameStart = line.find(": ") + 2;
                size_t nameEnd = line.find(", ID: ", nameStart);
                std::string name = line.substr(nameStart, nameEnd - nameStart);

                size_t idStart = nameEnd + 6;
                int userId = std::stoi(line.substr(idStart));

                std::vector<std::string> book_authors;
                size_t authorsStart = line.find(", Book_Authors: ") + 16;
                if (authorsStart != std::string::npos)
                {
                    size_t authorsEnd = line.find_last_of(",");
                    if (authorsEnd != std::string::npos)
                    {
                        std::string authorsStr = line.substr(authorsStart, authorsEnd - authorsStart);
                        // Split the authors string by ", " and add each author to the vector
                        size_t pos = 0;
                        size_t commaPos = authorsStr.find(", ");
                        while (commaPos != std::string::npos)
                        {
                            book_authors.push_back(authorsStr.substr(pos, commaPos - pos));
                            pos = commaPos + 2;
                            commaPos = authorsStr.find(", ", pos);
                        }
                        book_authors.push_back(authorsStr.substr(pos)); // Add the last author
                    }
                }

                User user(name, userId, book_authors);
                lib.addUser(user);
            }
        }
    }

private:
    FileManager() = default; // Private constructor to prevent instantiation
};

#endif // !FILEMANAGER_H
