@startuml

class Library {
    - books : vector<Book>
    - users : vector<User>

    + Instance()
    + searchUser(query : string)
    + searchBook(query : string)
    + getBook(query : string)
    + getUser(query : string)
    + addUser(u : user)
    + removeUser(u : User)
    + clear()
    + getBooks()
    + getUsers()
    + addBook()
    - Library()
}

interface Searchable {

    +search(query : string)
}

class Book {
    - available : bool 
    - author : String
    - title : String

    + borrow()
    + returnBook()
    + search(query : string)
    + isAvailable()
    + getAuthor()
    + getTitle()
}

class User {
    - name : String
    - userId : int
    - book_authors : vector<String>

    + search(query : string)
    + searchAuthor(query : string)
    + addBook(b : Book)
    + returnBook(b : Book)
    + getBookAuthors()
    + getBookCount()
    + getUserName()
    + getUserId()
    + transaction(t : Transaction)
}

/'
The command design pattern is implemented for the Transaction interface
User invokes Transactions and Library received the command .
'/

class Client {
    - lib : Library&
    + borrowBook(u : User, b : Book)
    + returnBook(u : User, b : Book)
}

interface Transaction {

    +transaction()
}

/' 
Add the book to the list of books contained by user. Also move book from available list to borrowed list in library 
'/
class BorrowTransaction {
    - user : User&
    - book : Book&
    - lib : Library&
    
    +transaction()
}

/'
Remove the book from list of books contained by user. Also move book from borrowed list in library to available list in library
'/
class ReturnTransaction {
    - user : User&
    - book : Book&
    - lib : Library&

    +transaction()
}

class LibraryException {
    - message : String

    + what()
}

class BookException {

}

class InputException {

}

class FileManager {
    + saveLibrary()
    + loadLibrary()
}

class LibraryException <<exception>>
class InputException <<exception>>
class BookException <<exception>>

Searchable <|.. Book
Searchable <|.. User
Transaction <|.. BorrowTransaction
Transaction <|.. ReturnTransaction
Transaction --> Library : Receiver
Client --> BorrowTransaction : Create
Client --> ReturnTransaction : Create
Client --> Library : Uses
Library "1" o-- "*" Book
Library "1" o-- "*" User
Library --> Searchable
User --> Book : borrows
User --> Transaction : Invokes
FileManager --> Library : save / load 
BookException --|> LibraryException
InputException --|> LibraryException
Client ..|> InputException : <<Throws>>
ReturnTransaction ..|> BookException : <<Throws>>
BorrowTransaction ..|> BookException : <<Throws>>
Library ..|> InputException : <<Throws>>
@enduml